# sixhats

./: .gitignore  Makefile  README.md  noxfile.py  pyproject.toml
.ai/: AGENTS.md
.ai/commands/: adr-check.md  adr-list.md  adr-suggest.md
.github/workflows/: ci.yml
components/: llm-openai.yaml  secretstore.yaml
docs/adr/: README.md  adr-000-architectural-principles.md  adr-001-coding-assistant-agnosticism.md  adr-002-ci-cd-agnosticism.md  adr-003-python-tooling.md  adr-004-adr-governance-commands.md  adr-005-dapr-agents-framework.md  adr-006-observability-strategy.md  adr-007-llm-provider-strategy.md  adr-008-evaluation-framework.md  adr-009-failure-handling.md  adr-010-workspace-schema.md
examples/: __init__.py  black_hat_demo.py
scripts/: adr-list.py  configure-assistant.sh  validate-agents-md.sh
src/: __init__.py
src/agents/: __init__.py  base.py  black_hat.py
src/evals/: __init__.py
src/observability/: __init__.py  tracing.py
src/schemas/: __init__.py  workspace.py
src/services/: __init__.py  workspace_service.py
src/workflows/: __init__.py
tests/: test_black_hat_agent.py  test_workspace_service.py
